Feat(admin): use x internal token
